--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ToDo</title>
+  <title>Note Taker</title>
+  <link rel="shortcut icon" href="notes.jpg" type="image/x-icon">
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -21,15 +22,17 @@
 <body>
   <main class="container">
     <header>
-      <h1>ToDo App</h1>
+      <h1>Notes App</h1>
     </header>
 
-    <form>
-      <input type="text" id="item" placeholder="New" required>
+    <form class="form-group">
+      <label for="item">* Press enter to create note</label>
+      <input type="text" id="item" placeholder="New" class="form-control" required>
     </form>
 
-    <h2>Items</h2>
+    <h2>Notes</h2>
     <ul></ul>
+
     <button type="button" class="btn btn-primary">Clear All</button>
   </main>
 
